[SGG-16] Update eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
       1,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
     ],
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
